ref: PortfolioReturnService에서 StockReturnData 계산을 별도 모듈로 이동.